WEB: Fix text alignment in the intro boxes
This is an attempt to fix the broken text aligment in the
intro boxes on the downloads page that occured when the text
is higher than the navigation box.

--- a/css/layout.css
+++ b/css/layout.css
@@ -147,7 +147,7 @@ body {
 }
 
 .navigation {
-	padding: 0.5em 2em;
+	padding: 0.5em 1.65em;
 }
 
 .navigation h2 {
